# pubmed-local

./: .env  .env.example  .gitignore  Cargo.toml  LICENCE.md  README.md  check_md5.py  config.nims  docker-compose.yml  dockerfile  example.cnf  keyfile  my.cnf  package-lock.json  package.json  pml.todo  pubmed-db.cnf  requirements2.txt  run.js  scratch.sql
assests/: README.md  schema_rough.md
assets/: README.md
data/: .gitignore
data/downloads/: .gitignore
db/mongo/: .env  load.js  load.py  sample.2.json  sample.json  sample.xml  test.js  test.py
src/: articles_sample.xml  check_md5s.js  chkmd5.nim  ciao.nim  dbs.nim  extract.mysql.py  ftp_files.js  infile.py  init_dbs.js  lib.rs  load.js  main.rs  mtest.py  oplog.js  pml.nim  pmlxml.nim  pubmed.base.py  scratch.js  scrtach.sql  test.js  test_solr.js  x.nim  xmltree2.nim  xmltree3.nim  y.nim  z.nim
src/js/: check_md5.js  cluster.js  ftp_getfiles.js  ftp_init.js  load.js  main-1.js  main-2.js  main-3.js  pubdb.js  test.js  test2.js  test3.js  unzip.js  update.js  worker-1.js  worker-2.js  worker-3.js  worker.js
src/py/: ftp_getfiles.py  ftp_init.py  ftp_unzip.py  utils.py
src/temp/: README.md
temp/: README.md  db  docker-compose-yml  pubmed.base.py
test/: tests.nim
test/data/xml/: README.md  articles_sample.xml
