[package]
name = "pubmed_db"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
json = "0.12.4"
tokio = { version = "1.16.1", features = ["full"] }
reqwest = { version = "0.11.9", features = ["json"] }
rusqlite = { version = "*", features = ["bundled"] }
mongodb = "2.1.0"